# TiDB-Hackathon

./: RCA_ANALYSIS.md  README.md
backend/core/: paystack.py
crash-lens-app/backend/: .gitignore  ALEMBIC_README.md  CONFIGURATION.md  README.md  alembic.ini  main.py  pyproject.toml  run_migrations.py
crash-lens-app/backend-v1/backend/: main.py  (+1 more)
crash-lens-app/backend/alembic/: env.py
crash-lens-app/backend/alembic/versions/: 0001_create_crash_repository_crash_rca_tables.py
crash-lens-app/backend/patch/: crash_rca_1757790483.patch  crash_rca_1757829443.patch
crash-lens-app/backend/src/app/api/: github.py  insights.py  repository.py  simulation.py  status.py  websocket.py
crash-lens-app/backend/src/app/core/: __init__.py  __main__.py  database.py
crash-lens-app/backend/src/app/core/agents/: __init__.py  error_analyzer_agent.py  tools.py
crash-lens-app/backend/src/app/core/code_indexer/: code_indexer.py
crash-lens-app/backend/src/app/core/document_indexer/: __init__.py  document_indexer.py
crash-lens-app/backend/src/app/core/parser/model/: __init__.py
crash-lens-app/backend/src/app/models/: model.py  sqlalchemy_models.py
crash-lens-app/backend/src/app/schema/: insights.py  repository.py  simulation.py
crash-lens-app/backend/src/app/services/: generate_github_service_diff.py  github_service.diff  github_service.py  github_service_original.py  insights_service.py  repository_service.py  s3_service.py  simulation_service.py  slack_service.py  websocket_service.py
crash-lens-app/backend/src/app/utils/: datetime_utils.py
crash-lens-app/backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
crash-lens-app/backend/src/core/code_indexer/: __init__.py
crash-lens-app/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
guard-pro-app/backend/: .env  pyproject.toml
guard-pro-app/frontend/: README.md  index.html  tailwind.config.ts
log-stream-generator/: README.md  install.sh  requirements.txt  script.py  setup_env.sh  simulate_logs.py
sample-ecommerce-app/: docker-compose.yml
sample-ecommerce-app/backend/: .dockerignore  Dockerfile  requirements.txt
sample-ecommerce-app/frontend/: README.md  index.html  tailwind.config.ts
(+75 files in other folders)
