[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.11",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "tidb-vector>=0.0.15",
    "tree-sitter>=0.23.2",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "voyageai>=0.3.4",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "slack-sdk>=3.26.0",
    "alembic>=1.13.0",
    "langgraph>=0.6.7",
    "langchain>=0.3.27",
    "pymysql>=1.1.2",
    "gitpython>=3.1.45",
    "greenlet>=3.2.4",
    "langchain-aws>=0.2.31",
]
