[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["HarisKumarGS <gsh2798@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
fastapi = "^0.116.1"
pydantic = "^2.11.7"
tidb-vector = "^0.0.15"
voyageai = "^0.3.5"
slack-sdk = "^3.36.0"
langgraph = "^0.6.7"
langchain = "^0.3.27"
langchain-aws = "^0.2.31"
sqlalchemy = "^2.0.43"
pymysql = "^1.1.2"
python-dotenv = "^1.1.1"
mysql-connector-python = "^9.4.0"
tree-sitter = "^0.25.1"
tree-sitter-python = "^0.25.0"
tree-sitter-javascript = "^0.25.0"
gitpython = "^3.1.45"
greenlet = "^3.2.4"
boto3 = "^1.40.28"
botocore = "^1.40.28"
pymupdf = "^1.26.4"
websockets = "^15.0.1"
pygithub = "^2.8.1"
aiohappyeyeballs = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
